# bewerbungs_planer

./: .gitignore  pyproject.toml
config/: user_example.json
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  index.css  jsx-modules.d.ts  styles.css
frontend/src/api/: client.ts
frontend/src/components/: Header.tsx  StatsBar.tsx  addform.jsx  app.jsx  data.jsx  drawer.jsx  table.jsx  tweaks-panel.jsx  ui.jsx
frontend/src/config/: statusConfig.ts
frontend/src/types/: application.ts
src/planer/: __main__.py  app.py  main.py
src/planer/api/: applications.py  main.py
src/planer/enums/: application_status.py
src/planer/models/: application.py  server_settings.py
src/planer/services/: view.py
src/planer/ui/: overview.py  status_config.py  styles.py
src/planer/ui/components/: card_view.py  header.py  stats_bar.py  table_view.py
