[tool.poetry]
name = "bewerbungs_planer"
version = "0.1.0"
description = ""
authors = ["Nadja Ellinger <ellingernadja@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
